--- a/erc721/package.json
+++ b/erc721/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
     "canvas": "^2.11.2",
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "pinata": "^1.0.5"
   }
